2008-11-26  Robert Staudinger  <robsta@gnome.org>

	* ccss-cairo/ccss-background-parser.c (background_factory),
	(background_inherit), (background_attachment_new),
	(background_image_new), (background_position_new),
	(background_repeat_new), (background_size_new):
	* ccss-cairo/ccss-border-image-parser.c:
	* ccss-cairo/ccss-border-parser.c (border_radius_new),
	(border_style_new), (border_width_new):
	* ccss-cairo/ccss-cairo-style.h:
	* ccss-cairo/ccss-color.c:
	* ccss-doc/ccss-sections.txt:
	* ccss-doc/tmpl/property.sgml:
	* ccss-doc/tmpl/style.sgml:
	* ccss/ccss-property-generic.c:
	* ccss/ccss-property.h:
	* ccss/ccss-style.c (ccss_style_set_property):
	* ccss/ccss-style.h:
	* ccss/ccss-stylesheet.c (inherit_container_style),
	(ccss_stylesheet_query):
	* ccss/ccss.sym:
	* examples/Makefile.am:
	Work on single-canvas support and style inheritance.

2008-11-26  Robert Staudinger  <robsta@gnome.org>

	* examples/example-5.c (expose_cb), (url), (main):
	* examples/example-5.svg:
	Add SVG fragment example.

2008-11-26  Robert Staudinger  <robsta@gnome.org>

	* TODO:
	* ccss-cairo/ccss-image.c (load_svg):
	* configure.in:
	* examples/Makefile.am:
	* libccss-cairo-1.pc.in:
	Enable use of SVG fragments.

2008-11-25  Robert Staudinger  <robsta@gnome.org>

	* ccss/ccss-property-generic.c (property_new): set property class correctly.

2008-11-25  Robert Staudinger  <robsta@gnome.org>

	* ccss-cairo/ccss-background-parser.c (background_factory):
	* ccss/ccss.h:
	Revisit TODOs.

2008-11-25  Robert Staudinger  <robsta@gnome.org>

	* ccss-cairo/ccss-background-parser.c (bg_position_parse),
	(bg_repeat_parse):
	* ccss-cairo/ccss-border-parser.c (border_color_factory),
	(border_style_factory), (border_width_factory),
	(border_factory_impl), (border_radius_new),
	(border_radius_factory), (border_style_new), (border_width_new):
	* ccss-cairo/ccss-border.c (get_line_draw_func):
	* ccss-cairo/ccss-cairo-style.c:
	* ccss-cairo/ccss-color.c (ccss_color_parse):